# vverb

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  init_backend.sh  package-lock.json  package.json  pgvector_test_setup.sh  pyproject.toml  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  commitlint.yml  pr-template-lint.yml  quality-check.yml  run-test.yml
docker/dev/: .env  docker-compose.pgvector.yaml  docker-compose.weaviate.yml
docker/test/: .env  docker-compose.pgvector-test.yaml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDING_PRINCIPLES.md  IDEAS.md
docs/research/: FEATURES.md  VECTOR_SEARCH.md
docs/research/pgvector/: test.sql
scripts/: pgvector_dev_setup.sh
src/adapters/pgvector/: connect.py  create_collection.py  delete.py  notes.md  query.py  upsert.py
src/core/: connect.py  create_collection.py  delete.py  query.py  upsert.py
src/vverb/: __init__.py  _log.py  base.py  exceptions.py  mapping.py
src/vverb/adapters/: __init__.py  base.py  pgvector.py
src/vverb/adapters/pgvector/: core.py  mapping.py
src/vverb/pgvector/: __init__.py  core.py  mapping.py
src/vverb/util/: schema.py
src/vverb/weaviate/: __init__.py  core.py
tests/: .env  conftest.py
tests/adapters/pgvector/: conftest.py  test_create_table.py  test_distance.py  test_pgvector_adapter.py  test_pgvector_capabilities.py  test_upsert_query.py
tests/adapters/weaviate/: conftest.py  docker-compose.yml  test_connection.py  test_weaviate_adapter.py  test_weaviate_capabilities.py
tests/vverb/pgvector/: conftest.py  test_create_table.py
tests/vverb/weaviate/: .env  conftest.py  test_weaviate_adaptor.py  test_weaviate_capabilities.py
