[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vverb"
version = "0.0.1"
description = "Five-verb wrapper for vector databases"
requires-python = ">=3.9"
dependencies = [
  "asyncpg>=0.29"
]
packages = [{ include = "vverb", from = "src" }]

[project.optional-dependencies]
pgvector = [
  "asyncpg>=0.29",
  "pgvector>=0.2.4"
]
dev = [
  # testing
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "testcontainers[postgres]>=3.7",
  "asyncpg>=0.29",
  "pgvector>=0.2.4",
  "ruff>=0.4",
  "black>=24.4",
  "pre-commit>=3.7",
  "mypy>=1.10",
    "commitizen>=3.13",
]

[tool.pytest.ini_options]
addopts = "-q"
log_cli = true
log_cli_level = "INFO"
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/vverb"]

[tool.ruff]
# Match Black’s default line length
line-length = 100
target-version = "py311"
fix = true
select = ["E", "F", "I", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["vverb"]
ignore_missing_imports = true
check_untyped_defs      = false
disallow_untyped_defs   = false
warn_unused_ignores     = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "v$version"